fixed z-index so that menu float on top of others

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,13 +5,13 @@
 }
 
 :root {
-  font-size: 16px;
+  font-size: 14px;
   font-family: "Montserrat", sans-serif;
 }
 
 @media screen and (min-width: 600px) {
   :root {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 .logo {
@@ -34,6 +34,7 @@
 
 .nav_link {
   padding: 1rem 1.5rem;
+  cursor: pointer;
 }
 .nav_link a {
   text-decoration: none;
@@ -166,6 +167,7 @@ header .slide_down {
   background-image: url("../assets/images/banner_bg.jpeg");
   background-position: 20% center;
   background-repeat: no-repeat;
+  z-index: -1;
   display: flex;
   flex-direction: column;
   justify-content: center;
