--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -6,7 +6,7 @@
 	background-image: url('../assets/images/banner_bg.jpeg');
 	background-position: 20% center;
 	background-repeat: no-repeat;
-
+	z-index: -1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
