--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -6,12 +6,12 @@
 }
 
 :root {
-	font-size: 16px;
+	font-size: 14px;
 	font-family: $font-family;
 }
 
 @media screen and (min-width: $sm) {
 	:root {
-		font-size: 18px;
+		font-size: 16px;
 	}
 }
