--- a/src/scss/components/_nav_link.scss
+++ b/src/scss/components/_nav_link.scss
@@ -2,6 +2,7 @@
 
 .nav_link {
 	padding: 1rem 1.5rem;
+	cursor: pointer;
 	a {
 		text-decoration: none;
 		text-align: center;
